[project]
name = "comohay-api"
version = "1.0.0"
description = "API of [ComoHay](https://comohay.com) website implemented with [FastAPI](https://fastapi.tiangolo.com) and [BeautifulSoup](https://www.crummy.com/software/BeautifulSoup)."
authors = [
    {name = "leynier", email = "leynier41@gmail.com"}
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.13"
dependencies = [
    "typer>=0.7.0",
    "fastapi[all]>=0.110.0",
    "beautifulsoup4>=4.11.2",
    "aiohttp[speedups]>=3.8.4",
]

[project.urls]
Homepage = "https://github.com/leynier/comohay-api"
Repository = "https://github.com/leynier/comohay-api"
Documentation = "https://github.com/leynier/comohay-api"

[project.scripts]
comohay-api = "api.main:app"

[dependency-groups]
dev = [
    "pytest>=7.2.2",
    "flake8>=5.0.4",
    "black>=23.1",
    "isort>=5.12.0",
    "pytest-cov>=4.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["api"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
