[project]
name = "comohay-api"
version = "1.0.0"
description = "API of [ComoHay](https://comohay.com) website implemented with [FastAPI](https://fastapi.tiangolo.com) and [BeautifulSoup](https://www.crummy.com/software/BeautifulSoup)."
authors = [
    {name = "leynier", email = "leynier41@gmail.com"}
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.13"
dependencies = [
    "typer>=0.7.0",
    "fastapi[all]>=0.110.0",
    "beautifulsoup4>=4.11.2",
    "aiohttp[speedups]>=3.8.4",
]

[project.urls]
Homepage = "https://github.com/leynier/comohay-api"
Repository = "https://github.com/leynier/comohay-api"
Documentation = "https://github.com/leynier/comohay-api"

[project.scripts]
comohay-api = "api.main:app"

[dependency-groups]
dev = [
    "pytest>=7.2.2",
    "ruff>=0.8.0",
]

[tool.hatch.build.targets.wheel]
packages = ["api"]

[tool.ruff]
line-length = 88
target-version = "py313"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501", # line too long (handled by formatter)
    "B008", # do not perform function calls in argument defaults (FastAPI pattern)
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
